--- a/css/index.css
+++ b/css/index.css
@@ -400,7 +400,7 @@ main .container #multimedia .bottom .img2 {
 
 main #prenons-con {
   width: 100%;
-  height: 122vh;
+  height: 100vh;
   background-color: rgba(140, 135, 135, 1);
   background-image: linear-gradient(
     140deg,
@@ -430,6 +430,7 @@ main #prenons-con form div.form-group {
 main #prenons-con form div.form-group label.sous-titre {
   display: block;
   margin-bottom: 10px;
+  margin-top: 15px;
 }
 
 main #prenons-con form div.form-group input[type="text"] {
@@ -464,7 +465,7 @@ main #prenons-con form div.form-group #freq {
   border: none;
   border-bottom: 2px solid gray;
   margin-top: 15px;
-  margin-bottom: 15px;
+  margin-bottom: 5px;
   padding-top: 10px;
   color: gray;
 }
@@ -501,6 +502,7 @@ main #prenons-con form div.form-btn {
   display: flex;
   align-items: center;
   justify-content: center;
+  padding-bottom: 10px;
 }
 
 main #prenons-con form div.form-btn > button {
@@ -626,7 +628,7 @@ footer .container .footer-top img {
 }
 
 footer .container .footer-top img:nth-child(3) {
-  margin-top: 300px;
+  margin-top: 280px;
 }
 
 footer .container .footer-top .p-container {
@@ -818,12 +820,12 @@ footer .container .footer-bottom .logo-group img:hover {
     margin-bottom: 8px;
   }
   header .header-container .bottom .img-right {
-    right: 0%;
+    right: 1%;
     top: 20%;
   }
   header .header-container .bottom .img-right img {
     margin-bottom: 8px;
-    width: 40px;
+    width: 30px;
     height: 28px;
   }
   /* Boutons en Intro */
@@ -870,26 +872,42 @@ footer .container .footer-bottom .logo-group img:hover {
     width: 110px;
   }
   /* structuration de la section multimédia */
+  main .container #multimedia .top div img.fleche-left,
+  main .container #multimedia .top div img.fleche-right {
+    margin-top: 0;
+  }
   main .container #multimedia .top {
     justify-content: space-evenly;
+    align-items: center;
+    justify-content: center;
     padding-top: 20px;
     margin-bottom: 20px;
   }
   main .container #multimedia .top .multi-info {
-    height: 320px;
-    width: 90%;
+    padding-top: 20px;
+    height: 350px;
+    width: 85%;
+    margin-left: 10px;
+    margin-right: 10px;
+    flex-direction: column;
   }
   main .container #multimedia .top .multi-info .image {
-    width: 40%;
+    width: 100%;
+    height: 30%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
   }
   main .container #multimedia .top .multi-info .image img {
-    width: 100%;
+    width: 90%;
+    height: 100%;
   }
   main .container #multimedia .top .multi-info .multi-info-text {
-    padding: 5px;
+    padding: 0;
     padding-left: 5px;
     padding-right: 5px;
-    width: 60%;
+    width: 100%;
+    height: 70%;
   }
   main .container #multimedia .top .multi-info .multi-info-text p {
     width: auto;
@@ -909,13 +927,13 @@ footer .container .footer-bottom .logo-group img:hover {
     padding: 6px;
   }
   main #prenons-con form div.form-btn {
-    flex-direction: column;
+    align-items: center;
+    justify-content: center;
   }
   main #prenons-con form .pop-up-btn > button {
-    width: 150px;
-    height: 45px;
-    margin: 15px;
-    padding: 6px;
+    height: 40px;
+    margin: 10px;
+    padding: 8px;
   }
   /* pop-up box */
   main #prenons-con form .pop-up {
@@ -935,9 +953,11 @@ footer .container .footer-bottom .logo-group img:hover {
   footer .container .footer-top img {
     width: 30px;
     height: 30px;
+    margin-left: 15px;
+    margin-right: 15px;
   }
   footer .container .footer-top img:nth-child(3) {
-    margin-top: 320px;
+    margin-top: 260px;
   }
   footer .container .footer-top .p-container {
     padding-top: 80px;
